# agenticTrader

./: .env.example  .gitignore  README.md  agentic_trader.db  pyproject.toml
app/: config.py  main.py
app/agent/: deps.py  prompts.py  trader.py
app/data/: cache.py  constituents.py  storage.py
app/models/: requests.py  responses.py
app/strategies/: models.py  registry.py
app/tools/: fundamentals.py  market_data.py  portfolio.py  screener.py  sentiment.py  technicals.py
tests/test_agent/: test_api.py
tests/test_strategies/: test_registry.py
tests/test_tools/: test_all_tools.py
